dfir_rs/tests/compile-fail-stable/surface_demuxenum_notenum.rs
../compile-fail/surface_demuxenum_notenum.rs